fixed spacing issues on titles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -354,6 +354,10 @@ main {
   border-radius: 8px;
 }
 
+.info-content .title-stack + .title-stack {
+  margin-top: 6px;
+}
+
 .info_more-btn {
   position: absolute;
   top: -15px;
